# thstro-chess

./: .gitignore  Cargo.toml
chess-engine/: Cargo.toml  README.md
chess-engine/src/: lib.rs  macros.rs
chess-engine/src/board/: legal_moves.rs  mod.rs  move_types.rs  squarespec.rs
gui/: Cargo.toml
gui/src/: main.rs  net.rs  style.css
src/: error.rs  game.rs  lib.rs  piece.rs
src/board/: fen_parser.rs  mod.rs  squarespec.rs
