[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess-engine = { path = "../chess-engine" }
bevy = "0.5.0"
bevy_egui = "0.7.0"
bevy_svg = { git = "https://github.com/Weasy666/bevy_svg", branch = "bevy-0.5" }
